@@ -2,6 +2,7 @@ This file documents the revision history for the SNClient+ agent.
 
 next:
          - check_service: fix case insensitive excludes
+         - check_pagefile: fix crash if there is no pagefile
 
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
